Add GitHub to hosted by in page footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,8 @@
                 <p>Developed thanks to data from the respective NASA missions.</p>
                 <p>&copy; 2009-2013 Peter Kuma</p>
                 <p>
-                    Hosted by <strong><a href="http://sourceforge.net/projects/ccplot/">SourceForge</a></strong>
+                    Hosted by <strong><a href="http://sourceforge.net">SourceForge</a></strong> &amp;
+                    <strong><a href="http://github.com">GitHub</a></strong> 
                 </p>
                 <form class="feedback" action="http://vcielka.darksun.sk/~peter/ccplot-feedback.php" method="post">
                     <div class="heading">Feedback</div>
