--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
             {{ header }}
         {% endfor %}
     </head>
-    <body onload="document.getElementsByClassName('feedback')[0].action+='?qts='+Math.floor(new Date().getTime()/1000)">
+    <body>
         <div id="main">
             <header>
                 <nav class="nav">
@@ -42,14 +42,6 @@
                     Hosted by <strong><a href="http://sourceforge.net">SourceForge</a></strong> &amp;
                     <strong><a href="http://github.com">GitHub</a></strong> 
                 </p>
-                <form class="feedback" action="http://vcielka.darksun.sk/~peter/ccplot-feedback.php" method="post">
-                    <div class="heading">Feedback</div>
-                    <p>We are interested in hearing from you. Tell us about your
-                    experience with ccplot.</p>
-                    <input type="text" name="email" placeholder="E-mail (optional)" />
-                    <textarea name="feedback"></textarea>
-                    <button type="submit">Send</button>
-                </form>
             </footer>
         </div>
     </body>
