--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
                     <a href="/features/">Features</a>
                     <a href="/download/">Getting Started</a>
                     <a href="/doc/">Documentation</a>
+                    <a href="/api/">API</a>
                     <a href="/data/">Data Sources</a>
                 </nav>
                 <hgroup>
