--- a/css/article.css
+++ b/css/article.css
@@ -85,17 +85,23 @@ li {
     padding: 0;
 }
 
-pre code {
-    display: block;
-    white-space: pre-wrap;
-}
-
 code,.code {
     font-family: "Bitstream Vera Sans Mono", monospace;
     font-size: 90%;
+    background: #f5f5f5;
+    padding: 0.2em;
+}
+
+pre code {
+    display: block;
+    white-space: pre-wrap;
     padding: 0.5em;
     margin: 0.7em 0;
-    background: rgba(0,0,0,0.04);
+}
+
+div.code {
+    padding: 0.5em;
+    margin: 0.7em 0;
 }
 
 .col1 {
