Replace "Hosted by" by "Hosted on"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                 <p>Developed thanks to data from the respective NASA missions.</p>
                 <p>&copy; 2009-2013 Peter Kuma</p>
                 <p>
-                    Hosted by <strong><a href="http://sourceforge.net">SourceForge</a></strong> &amp;
+                    Hosted on <strong><a href="http://sourceforge.net">SourceForge</a></strong> &amp;
                     <strong><a href="http://github.com">GitHub</a></strong> 
                 </p>
             </footer>
