Modify footer links to point to project pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
                 <p>Developed thanks to data from the respective NASA missions.</p>
                 <p>&copy; 2009-2013 Peter Kuma</p>
                 <p>
-                    Hosted on <strong><a href="http://sourceforge.net">SourceForge</a></strong> &amp;
-                    <strong><a href="http://github.com">GitHub</a></strong> 
+                    Hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
+                    <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong> 
                 </p>
             </footer>
         </div>
