More specific attribution

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
                 {{ content }}
             </article>
             <footer>
-                <p>Developed thanks to data from the respective NASA missions.</p>
+                <p>Developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
                 <p>&copy; 2009-2013 Peter Kuma</p>
                 <p>
                     Hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
