Add Travis CI to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,8 @@
                 <p>&copy; 2009-2013 Peter Kuma</p>
                 <p>
                     Hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
-                    <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong> 
+                    <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
+                    testing by <strong><a href="https://travis-ci.org/peterkuma/ccplot">Travis CI</a></strong>
                 </p>
             </footer>
         </div>
