--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,30 +15,30 @@
     <body>
         <div id="main">
             <header>
-                <nav class="nav">
-                    <div style="float: right">
-                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" alt="github"></a>
-                    </div>
-                    <a href="/">Home</a>
-                    <a href="/features/">Features</a>
-                    <a href="/download/">Getting Started</a>
-                    <a href="/doc/">Documentation</a>
-                    <a href="/api/">API</a>
-                    <a href="/data/">Data Sources</a>
-                </nav>
                 <hgroup>
                     <a href="/">
                         <h1>ccplot</h1>
                         <h2>CloudSat and CALIPSO plotting tool</h2>
                     </a>
                 </hgroup>
+                <nav class="nav">
+                    <div style="float: right">
+                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" alt="github"></a>
+                    </div>
+                    <span><a href="/">Home</a></span>
+                    <span><a href="/features/">Features</a></span>
+                    <span><a href="/download/">Getting Started</a></span>
+                    <span><a href="/doc/">Documentation</a></span>
+                    <span><a href="/api/">API</a></span>
+                    <span><a href="/data/">Data Sources</a></span>
+                </nav>
             </header>
             <article>
                 {{ content }}
             </article>
             <footer>
                 <p>Developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
-                <p>&copy; 2009-2015 Peter Kuma</p>
+                <p>&copy; 2009–2018 Peter Kuma</p>
                 <p>
                     Hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
                     <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
