--- a/css/header.css
+++ b/css/header.css
@@ -1,31 +1,43 @@
 header nav {
     font-size: 120%;
+    font-weight: 600;
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
+    border-bottom: 1px solid black;
 }
 
-header nav > a {
-    display: inline-block;
-    margin-right: 1.5em;
+header nav > span:after {
+    content: "·";
+    color: #555;
+    font-weight: normal;
+    margin-left: 0.6em;
+    margin-right: 0.6em;
+}
+
+header nav > span:last-child:after {
+    content: "";
 }
 
 header hgroup {
+    text-align: center;
     display: block;
     font-weight: bold;
-    margin: 1.2em 0;
+    margin-top: 1.2em;
+    margin-bottom: 1em;
 }
 
 header hgroup a {
     color: inherit;
     display: block;
-    padding: 0.3em;
-    margin: -0.3em;
-    width: 22em;
 }
 
 header hgroup h1 {
-    font-size: 200%;
+    font-size: 220%;
     color: #222;
     margin-top: 0;
-    margin-bottom: 0.3em;
+    margin-bottom: 0.6em;
 }
 
 header hgroup h2 {
