--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ header nav {
     padding-bottom: 0.6em;
     margin-top: 0.7em;
     margin-bottom: 0.7em;
-    border-bottom: 1px solid black;
+    border-bottom: 7px solid #eee;
 }
 
 header nav > span:after {
