--- a/css/footer.css
+++ b/css/footer.css
@@ -35,6 +35,6 @@
 footer {
     margin-top: 4em;
     padding-top: 0.3em;
-    border-top: 1px solid #aaa;
+    border-top: 7px solid #eee;
     font-size: 90%;
 }
