--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,12 +37,12 @@
                 {{ content }}
             </article>
             <footer>
-                <p>Developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
+                <p>ccplot was developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
                 <p>&copy; 2009–2018 Peter Kuma</p>
                 <p>
-                    Hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
+                    The ccplot project is hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
                     <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
-                    testing by <strong><a href="https://travis-ci.org/peterkuma/ccplot">Travis CI</a></strong>
+                    testing by <strong><a href="https://travis-ci.org/peterkuma/ccplot">Travis CI</a></strong>.
                 </p>
             </footer>
         </div>
