HDPI github logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
                 </hgroup>
                 <nav class="nav">
                     <div style="float: right">
-                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" alt="github"></a>
+                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
                     </div>
                     <span><a href="/">Home</a></span>
                     <span><a href="/features/">Features</a></span>
