--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
             </article>
             <footer>
                 <p>ccplot was developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
-                <p>&copy; 2009–2018 Peter Kuma</p>
+                <p>&copy; 2009–2018 <a href="https://github.com/peterkuma/">Peter Kuma<a/></p>
                 <p>
                     The ccplot project is hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
                     <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
