Add meta viewport for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     <head>
         <title>ccplot ‧ {{ page.title }}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="CloudSat,CALIPSO,CPR,CALIOP,MODIS,plot" />
         <link rel="stylesheet" type="text/css" href="/css/ccplot.css" />
         {% for file in page.css %}
