Optimization for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,15 +23,15 @@
                     </a>
                 </hgroup>
                 <nav class="nav">
-                    <div style="float: right">
-                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
-                    </div>
                     <span><a href="/">Home</a></span>
                     <span><a href="/features/">Features</a></span>
                     <span><a href="/download/">Getting Started</a></span>
                     <span><a href="/doc/">Documentation</a></span>
                     <span><a href="/api/">API</a></span>
                     <span><a href="/data/">Data Sources</a></span>
+                    <div class="github">
+                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
+                    </div>
                 </nav>
             </header>
             <article>
