--- a/css/header.css
+++ b/css/header.css
@@ -6,9 +6,11 @@ header nav {
     margin-top: 0.7em;
     margin-bottom: 0.7em;
     border-bottom: 7px solid #eee;
+    line-height: 150%;
+    position: relative;
 }
 
-header nav > span:after {
+header nav > span:before {
     content: "·";
     color: #555;
     font-weight: normal;
@@ -16,8 +18,23 @@ header nav > span:after {
     margin-right: 0.6em;
 }
 
-header nav > span:last-child:after {
+header nav > span:first-child:before {
     content: "";
+    margin-left: 0;
+    margin-right: 0;
+}
+
+header nav .github {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+@media (max-width: 950px) {
+    header nav .github {
+        position: inherit;
+        margin: 10px 0;
+    }
 }
 
 header hgroup {
