Footer (c) statement change format

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
             </article>
             <footer>
                 <p>ccplot was developed thanks to data from NASA CloudSat, CALIPSO and MODIS projects.</p>
-                <p>&copy; 2009–2021 <a href="https://peterkuma.net">Peter Kuma</a></p>
+                <p>Copyright &copy; 2009–2021 <a href="https://peterkuma.net">Peter Kuma</a></p>
                 <p>
                     The ccplot project is hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
                     <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
