--- a/css/ccplot.css
+++ b/css/ccplot.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Asap:400,700);
+@import url(https://fonts.googleapis.com/css?family=Asap:400,700);
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i');
 
 @import "header.css";
