--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,7 @@
                 <p>Copyright &copy; 2009–2021 <a href="https://peterkuma.net">Peter Kuma</a></p>
                 <p>
                     The ccplot project is hosted on <strong><a href="https://sourceforge.net/projects/ccplot/">SourceForge</a></strong> &amp;
-                    <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>,
-                    testing by <strong><a href="https://travis-ci.org/peterkuma/ccplot">Travis CI</a></strong>.
+                    <strong><a href="https://github.com/peterkuma/ccplot/">GitHub</a></strong>.
                 </p>
             </footer>
         </div>
