--- a/css/article.css
+++ b/css/article.css
@@ -24,6 +24,13 @@ article h3 {
     margin-bottom: 0.8em;
 }
 
+article h4 {
+    font-size: 100%;
+    font-weight: bold;
+    margin-top: 1.4em;
+    margin-bottom: 0.8em;
+}
+
 article blockquote {
     margin: 1.5em 2em;
 }
