Change all headers from capitalized to normal case

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                     <span><a href="/download/">Installation</a></span>
                     <span><a href="/doc/">Documentation</a></span>
                     <span><a href="/api/">API</a></span>
-                    <span><a href="/data/">Data Sources</a></span>
+                    <span><a href="/data/">Data sources</a></span>
                     <div class="github">
                         <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
                     </div>
