--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
                 <nav class="nav">
                     <span><a href="/">Home</a></span>
                     <span><a href="/features/">Features</a></span>
-                    <span><a href="/download/">Installation</a></span>
+                    <span><a href="/installation/">Installation</a></span>
                     <span><a href="/doc/">Documentation</a></span>
                     <span><a href="/api/">API</a></span>
                     <span><a href="/data/">Data sources</a></span>
