--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ccplot ‧ {{ page.title }}</title>
+        <title>{{ page.title }} ‧ ccplot</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="CloudSat,CALIPSO,CPR,CALIOP,MODIS,plot" />
