--- a/css/article.css
+++ b/css/article.css
@@ -39,6 +39,31 @@ article img {
     max-width: 100%;
 }
 
+@media (max-width: 950px) {
+    article p {
+        margin: 0.3em 0;
+    }
+
+    article h1 {
+        margin-top: 1.2em;
+        margin-bottom: 0.6em;
+    }
+
+    article h2 {
+        margin-top: 1em;
+        margin-bottom: 0.5em;
+    }
+
+    article h3 {
+        margin-top: 0.4em;
+        margin-bottom: 0.2em;
+    }
+
+    article img {
+        height: auto !important;
+    }
+}
+
 .note {
     padding: 4pt;
     margin: 2pt 0;
@@ -106,7 +131,6 @@ code,.code {
 
 pre code {
     display: block;
-    white-space: pre-wrap;
     padding: 0.5em;
     margin: 0.7em 0;
     max-width: 100%;
