--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
                     <span><a href="/installation/">Installation</a></span>
                     <span><a href="/doc/">Documentation</a></span>
                     <span><a href="/api/">API</a></span>
+                    <span><a href="/ccbrowse/">ccbrowse</a></span>
                     <span><a href="/data/">Data sources</a></span>
                     <div class="github">
                         <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
