--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>{{ page.title }} ‧ ccplot</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="CloudSat,CALIPSO,CPR,CALIOP,MODIS,plot" />
+        <meta name="author" content="Peter Kuma" />
+        <link rel="stylesheet" type="text/css" href="/css/font.css" />
         <link rel="stylesheet" type="text/css" href="/css/ccplot.css" />
         {% for file in page.css %}
             <link rel="stylesheet" type="text/css" href="/css/{{ file }}" />
