ccbrowse: Note about supported browsers.

--- a/css/home.css
+++ b/css/home.css
@@ -22,6 +22,11 @@
     display: block;
     width: 200px;
     margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.ccbrowse .browsers {
+    font-size: 14px;
 }
 
 .download {
