--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,9 +32,9 @@
                     <span><a href="/api/">API</a></span>
                     <span><a href="/ccbrowse/">ccbrowse</a></span>
                     <span><a href="/data/">Data sources</a></span>
-                    <div class="github">
-                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" width="60" alt="github"></a>
-                    </div>
+                    <span class="github">
+                        <a href="https://github.com/peterkuma/ccplot"><img src="/img/github.png" alt="github"></a>
+                    </span>
                 </nav>
             </header>
             <article>
