Fix accessibility issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="CloudSat,CALIPSO,CPR,CALIOP,MODIS,plot" />
         <meta name="author" content="Peter Kuma" />
+        <meta name="description" content="ccplot is an open source command-line program for plotting profile, layer and earth view data sets from CloudSat, CALIPSO and Aqua MODIS products" />
         <link rel="stylesheet" type="text/css" href="/css/font.css" />
         <link rel="stylesheet" type="text/css" href="/css/ccplot.css" />
         {% for file in page.css %}
