--- a/css/font.css
+++ b/css/font.css
@@ -3,6 +3,7 @@
     src: url("../font/open-sans/regular.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
     src: url("../font/open-sans/bold.woff2") format("woff2");
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
     src: url("../font/open-sans/semibold.woff2") format("woff2");
     font-weight: 600;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
     src: url("../font/open-sans/italic.woff2") format("woff2");
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -31,4 +35,5 @@
     src: url("../font/open-sans/bolditalic.woff2") format("woff2");
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 }
