--- a/css/article.css
+++ b/css/article.css
@@ -1,5 +1,5 @@
 article p {
-    margin: 0.6em 0;
+    margin: 0.75rem 0;
     line-height: 160%;
 }
 
@@ -13,21 +13,21 @@ article h1 {
 article h2 {
     font-size: 130%;
     font-weight: bold;
-    margin-top: 1.4em;
+    margin-top: 1.2em;
     margin-bottom: 0.8em;
 }
 
 article h3 {
     font-size: 110%;
     font-weight: bold;
-    margin-top: 1.4em;
+    margin-top: 1.2em;
     margin-bottom: 0.8em;
 }
 
 article h4 {
     font-size: 100%;
     font-weight: bold;
-    margin-top: 1.4em;
+    margin-top: 1.2em;
     margin-bottom: 0.8em;
 }
 
@@ -37,31 +37,6 @@ article blockquote {
 
 article img {
     max-width: 100%;
-}
-
-@media (max-width: 950px) {
-    article p {
-        margin: 0.3em 0;
-    }
-
-    article h1 {
-        margin-top: 1.2em;
-        margin-bottom: 0.6em;
-    }
-
-    article h2 {
-        margin-top: 1em;
-        margin-bottom: 0.5em;
-    }
-
-    article h3 {
-        margin-top: 0.4em;
-        margin-bottom: 0.2em;
-    }
-
-    article img {
-        height: auto !important;
-    }
 }
 
 .note {
@@ -118,7 +93,7 @@ ul {
 }
 
 li {
-    margin: 6pt 0;
+    margin: 1em 0;
     padding: 0;
 }
 
@@ -162,5 +137,24 @@ figure {
 @media (max-width: 950px) {
     .wrapped-blocks div {
         width: inherit;
+    }
+
+    article h1 {
+        margin-top: 1.2em;
+        margin-bottom: 0.6em;
+    }
+
+    article h2 {
+        margin-top: 1em;
+        margin-bottom: 0.5em;
+    }
+
+    article h3 {
+        margin-top: 0.4em;
+        margin-bottom: 0.2em;
+    }
+
+    article img {
+        height: auto !important;
     }
 }
