--- a/css/header.css
+++ b/css/header.css
@@ -72,6 +72,7 @@ header nav .github img {
 
     header nav {
         padding-bottom: 0.4em;
+        line-height: 180%;
     }
 
     header nav > span {
