Fix an HTML error in the header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
     <body>
         <div id="main">
             <header>
-                <hgroup>
-                    <a href="/">
-                        <h1>ccplot</h1>
-                        <h2>CloudSat and CALIPSO plotting tool</h2>
-                    </a>
-                </hgroup>
+                <a class="heading" href="/">
+                    <hgroup>
+                            <h1>ccplot</h1>
+                            <h2>CloudSat and CALIPSO plotting tool</h2>
+                    </hgroup>
+                </a>
                 <nav class="nav">
                     <span><a href="/">Home</a></span>
                     <span><a href="/features/">Features</a></span>
