--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>{% if page.title == '' %}ccplot: CloudSat and CALIPSO plotting tool{% else %}{{ page.title }} ‧ ccplot (CloudSat and CALIPSO plotting tool){% endif %}</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="keywords" content="CloudSat,CALIPSO,CPR,CALIOP,MODIS,plot" />
         <meta name="author" content="Peter Kuma" />
