Comment out references to public ccbrowse
The server is not available now.

--- a/css/home.css
+++ b/css/home.css
@@ -7,10 +7,12 @@
     line-height: 160%;
 }
 
+/*
 .preamble .abstract {
     width: calc(100% - 260px);
     float: left;
 }
+*/
 
 .ccbrowse {
     float: right;
